# internal/handler/handler.go
@@ -22,16 +22,19 @@ func (h *Handler) InitRoutes() *gin.Engine {
 
 	admin := router.Group("/admin", h.middlewareAdmin)
 	{
-		admin.POST("/visitor/user", h.signUpUser)
-		admin.POST("/visitor/author", h.signUpAuthor)      //create
-		admin.GET("/visitor", h.getAllUsers)               // getAll
-		admin.POST("/visitor/:visitor_id", h.getUserById)  // getById
-		admin.PUT("/visitor/:visitor_id", h.updateUser)    // update
-		admin.DELETE("/visitor/:visitor_id", h.deleteUser) // delete
+		admin.POST("/users", h.createUser)
+		admin.GET("/users", h.getAllUsers)             // getAll
+		admin.GET("/users/:users_id", h.getUserById)   // getById
+		admin.PUT("/users/:users_id", h.updateUser)    // update
+		admin.DELETE("/users/:users_id", h.deleteUser) // delete
 	}
 
 	auth := router.Group("/auth")
 	{
+		admin := auth.Group("/admin")
+		{
+			admin.POST("/sign-in", h.signInAdmin)
+		}
 		author := auth.Group("/author")
 		{
 			author.POST("/sign-in", h.signInAuthor)
